--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
   <script language="javascript" type="text/javascript" src="ball.js"></script>
   <script language="javascript" type="text/javascript" src="timer.js"></script>
+  <script language="javascript" type="text/javascript" src="waves.js"></script>
 </head>
 
 <body>
