--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script language="javascript" type="text/javascript" src="ball.js"></script>
   <script language="javascript" type="text/javascript" src="timer.js"></script>
   <script language="javascript" type="text/javascript" src="waves.js"></script>
+  <script language="javascript" type="text/javascript" src="pageHTML.js"></script>
 </head>
 
 <body>
