--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.js"></script>
   <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.sound.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
-  <script language="javascript" type="text/javascript" src="ball.js"></script>
+  <script language="javascript" type="text/javascript" src="pointer.js"></script>
   <script language="javascript" type="text/javascript" src="timer.js"></script>
   <script language="javascript" type="text/javascript" src="waves.js"></script>
-  <script language="javascript" type="text/javascript" src="pageHTML.js"></script>
+  <script language="javascript" type="text/javascript" src="QRSWave.js"></script>
 </head>
 
 <body>
